# c2025-a

./: .gitignore  CMakeLists.txt  Makefile
level0/: main.c
level0/bubbleSort/: main.c
level1/p01_running_letter/: main  main.c
level1/p02_is_prime/: main.c
level1/p03_all_primes/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c
level1/p07_maze/: README.md  main.c  maze_layout.txt
level1/p08_push_boxes/: layout_level_1.txt  layout_level_2.txt  layout_level_4.txt  main.c  player_steps.txt  solve_push_boxes.py
level1/p09_linked_list/: README.md  main.c
level1/p10_warehouse/: item_list.c  item_list.h  main.c  store_json_management.c  store_json_management.h  tools.h  warehouse_store
self_learning/01_stack/: main.c
self_learning/02_queue/: main.c
self_learning/03_RPN/: main.cpp
